feat(controller): add pagination and sorting support to ProdutoController